--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
     "lucide-react": "^0.344.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
