--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,79 +13,24 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "src": "/favicon.ico",
+      "sizes": "any",
+      "type": "image/x-icon"
     }
   ],
-  "shortcuts": [
-    {
-      "name": "Discover Music",
-      "short_name": "Discover",
-      "description": "Find new music and trending tracks",
-      "url": "/?action=discover",
-      "icons": [
-        {
-          "src": "/icons/icon-96x96.png",
-          "sizes": "96x96"
-        }
-      ]
-    },
-    {
-      "name": "My Playlists",
-      "short_name": "Playlists",
-      "description": "Access your personal playlists",
-      "url": "/?action=playlists",
-      "icons": [
-        {
-          "src": "/icons/icon-96x96.png",
-          "sizes": "96x96"
-        }
-      ]
-    }
-  ],
+      "shortcuts": [
+      {
+        "name": "Discover Music",
+        "short_name": "Discover",
+        "description": "Find new music and trending tracks",
+        "url": "/?action=discover"
+      },
+      {
+        "name": "My Playlists",
+        "short_name": "Playlists",
+        "description": "Access your personal playlists",
+        "url": "/?action=playlists"
+      }
+    ],
   "prefer_related_applications": false
 } 
